--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@ input:focus {
 }
 
 #header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 100%;
     display: flex;
     background: #ffffff;
     border-bottom: 1px solid #ebebeb;
@@ -124,6 +128,9 @@ input:focus {
 }
 
 #category-section {
+    background: #ffffff;
+    position: sticky;
+    top: 4rem;
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
     font-size: 12px;
     display: flex;
@@ -189,6 +196,10 @@ input:focus {
     margin-left: 30px;
     margin-right: 30px;
     justify-content: space-evenly;
+}
+
+.apartment-group {
+    cursor: pointer;
 }
 
 .apartment-img {
